Make RecipeIngredient inherit Ingredient, less hacks.